# cli

./: pyproject.toml
langc/: cli.py  dev_scripts.py
langc/namespaces/: hub.py  serve.py
langc/utils/: git.py  packages.py
package_template/: pyproject.toml
project_template/: README.md  pyproject.toml
tests/: test_utils.py
